--- a/package-service.yml
+++ b/package-service.yml
@@ -30,6 +30,15 @@ spring:
     hibernate:
       ddl-auto: create-drop
 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+    health:
+      show-details: always
+
 #read form env variable
 qrcode:
   output:
