--- a/package-service.yml
+++ b/package-service.yml
@@ -43,7 +43,7 @@ spring:
 resilience4j:
   circuitbreaker:
     instances:
-      companyBreaker:
+      funkyBreaker:
         registerHealthIndicator: true
         slidingWindowSize: 10
         minimumNumberOfCalls: 5
