--- a/package-service-dev.yml
+++ b/package-service-dev.yml
@@ -6,9 +6,12 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://servicereg:8761/eureka/
 
 management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
   tracing:
     sampling:
       probability: 1.0
@@ -30,7 +33,7 @@ spring:
 #  datasource:
 #    url: jdbc:h2:mem:test
   datasource:
-    url: jdbc:postgresql://localhost:5432/funky-test
+    url: jdbc:postgresql://postgres:5432/funky-dev
     username: funky
     password: funky
   jpa:
