--- a/funky-service-dev.yml
+++ b/funky-service-dev.yml
@@ -6,9 +6,12 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://servicereg:8761/eureka/
 
 management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/span
   tracing:
     sampling:
       probability: 1.0
