--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -6,7 +6,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://service-registry:8761/eureka/
 
 management:
   tracing:
@@ -32,7 +32,7 @@ spring:
           filters:
             - SetPath=/
         - id: eureka-server-static
-          uri: http://localhost:8761
+          uri: http://service-registry:8761
           predicates:
             - Path=/eureka/**
 
