--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -26,7 +26,7 @@ spring:
           predicates:
             - Path=/package/**
         - id: eureka-server
-          uri: http://localhost:8761
+          uri: http://service-registry:8761
           predicates:
             - Path=/eureka/main
           filters:
