--- a/package-service-dev.yml
+++ b/package-service-dev.yml
@@ -6,7 +6,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://service-registry:8761/eureka/
+      defaultZone: http://serviceregistry:8761/eureka/
 
 management:
   zipkin:
