--- a/package-service-dev.yml
+++ b/package-service-dev.yml
@@ -66,7 +66,7 @@ resilience4j:
 #read form env variable
 qrcode:
   output:
-    directory: "/Users/javierbarbieri/developer/package-service"
+    directory: "/Users/javierbarbieri/developer/packageservice"
 
 funky-service:
-  url: http://funky-service:8082
+  url: http://funkyservice:8082
